[metadata]
name = gleams
author = Wout Bittremieux
author_email = wbittremieux@health.ucsd.edu
description =  GLEAMS is a Learned Embedding for Annotating Mass Spectra
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/bittremieux/gleams
project_urls =
    Bug Tracker = https://github.com/bittremieux/gleams/issues
license = BSD-3-Clause License
classifiers =
    Intended Audience :: Science/Research
    License :: OSI Approved :: BSD License
    Operating System :: Unix
    Programming Language :: Python :: 3
    Topic :: Scientific/Engineering :: Bio-Informatics

[options]
packages = find:
python_requires = >=3.8
install_requires =
    numpy
    apache-airflow
    click
    cython
    fastcluster
    h5py==3.6.0
    jinja2
    joblib
    lxml
    MarkupSafe
    multiprocessing-logging
    numba
    pandas
    pyarrow
    pyteomics
    scikit-learn
    scipy
    spectrum_utils==0.3.5
    SQLAlchemy
    tensorflow-addons==0.14.0
    tensorflow==2.5.0
    tomli
    tqdm

[options.extras_require]
notebook =
    apricot-select==0.6.1
    jupyter==1.0.0
    matplotlib==3.4.3
    ppx==1.2.3
    scikit-optimize==0.8.1
    seaborn==0.11.2
    umap-learn==0.5.1

[options.data_files]
gleams/data =
    data/gleams_82c0124b.hdf5
    data/gleams_reference_spectra.mgf

[options.entry_points]
console_scripts =
    gleams = gleams.gleams:gleams
